# RealTime-Vision-Orchestrator

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yml
config/: rvo.yaml
crates/rvo-bin/: Cargo.toml
crates/rvo-bin/examples/: rtsp_demo.rs  synthetic_demo.rs
crates/rvo-bin/src/: main.rs  runtime.rs
crates/rvo-buffer/: Cargo.toml
crates/rvo-buffer/src/: buffer.rs  lib.rs
crates/rvo-camera/: Cargo.toml
crates/rvo-camera/src/: camera.rs  lib.rs  mock.rs
crates/rvo-clips/: Cargo.toml
crates/rvo-clips/src/: clip.rs  encoder.rs  lib.rs  manager.rs
crates/rvo-config/: Cargo.toml
crates/rvo-config/src/: config.rs  lib.rs
crates/rvo-core/: Cargo.toml
crates/rvo-core/src/: frame.rs  lib.rs  time.rs
crates/rvo-detector/: Cargo.toml
crates/rvo-detector/src/: detector.rs  dummy.rs  jitter.rs  lib.rs  load.rs
crates/rvo-events/: Cargo.toml
crates/rvo-events/src/: condition.rs  engine.rs  event.rs  lib.rs  publisher.rs
crates/rvo-metrics/: Cargo.toml
crates/rvo-metrics/src/: lib.rs  metrics.rs
crates/rvo-scenarios/: Cargo.toml
crates/rvo-scenarios/src/: lib.rs
crates/rvo-scheduler/: Cargo.toml
crates/rvo-scheduler/src/: scheduler.rs
crates/rvo-signals/: Cargo.toml
crates/rvo-signals/src/: lib.rs  store.rs
crates/rvo-testkit/: Cargo.toml
crates/rvo-testkit/src/: camera.rs  capture.rs  detectors.rs  lib.rs  pipeline.rs
docs/: ARCHITECTURE.md  BENCHMARKING.md  BENCHMARK_REMEDIATION_REPORT.md  CURRENT_IMPLEMENTATION.md  DEVELOPER_GUIDE.md  ISSUES_AND_LEFTOVERS.md  PLOT_GUIDE.md  README.md  ROADMAP.md  TESTKIT_SPEC.md
