[package]
name = "rvo-clips"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
rvo-buffer = { path = "../rvo-buffer" }
rvo-events = { path = "../rvo-events" }
rvo-metrics = { path = "../rvo-metrics" }
opencv = { version = "0.88", default-features = false, features = ["imgcodecs"] }
serde_json = "1.0"