[package]
name = "rvo-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
# External dependencies
crossbeam-channel = "0.5"
log = "0.4"
anyhow = "1.0"

# Workspace dependencies
rvo-detector = { path = "../rvo-detector" }
rvo-signals = { path = "../rvo-signals" }
rvo-events = { path = "../rvo-events" }
rvo-buffer = { path = "../rvo-buffer" }
rvo-clips = { path = "../rvo-clips" }
rvo-metrics = { path = "../rvo-metrics" }